--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -87,7 +87,7 @@ main.container {
 }
 
 @media screen and (min-width: 600px) {
-  .column:first-child {
+  .column {
     padding-left: 10vw;
     padding-right: 10vw;
   }
@@ -99,6 +99,7 @@ main.container {
     .column {
       padding-right: 0;
       &:not(:first-child) {
+        padding-left: 0;
         margin-left: 3.2rem;
       }
     }
