--- a/scss/components/_related.scss
+++ b/scss/components/_related.scss
@@ -1,6 +1,7 @@
 .related {
   background: var(--clr-grey-1);
   padding: 1.6rem;
+  margin-top: 3.2rem;
   h3 {
     margin-top: 0;
   }
@@ -25,5 +26,6 @@
     position: sticky;
     top: 3.2rem;
     width: 30rem;
+    margin-top: 0;
   }
 }
